[package]
name = "spyware"
version = "0.1.0"
authors = ["talbor49 <talbor49@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
ron = "0.5.1"
byteorder = "1.3.2"
cmd_lib = "0.7.8"
rand = "0.7.3"
num-traits = "0.2.11"
enum-primitive-derive = "0.1.2"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
panic = 'abort'
codegen-units = 1