[package]
name = "spyware"
version = "0.1.0"
authors = ["talbor49 <talbor49@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
ron = "0.5.1"
byteorder = "1.3.2"
cmd_lib = "0.7.8"
num-traits = "0.2.11"
enum-primitive-derive = "0.1.2"
log = "0.4.8"
queues = "1.1.0"

[dev-dependencies]
rand = "0.7.3"

[profile.release]
lto = true # More optimization, slower compilation
opt-level = 'z'  # Optimize for size.
panic = 'abort' # For smaller binary size
codegen-units = 1 # Allows for more optimization tricks, but slower