[package]
name = "spyware"
version = "0.1.0"
authors = ["talbor49 <talbor49@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
ron = "0.6.2"
byteorder = "1.3.4"
cmd_lib = "0.7.4"
log = "0.4.11"
failure = "0.1.7"
once_cell = "1.4.1"
scrap = "0.5.0"

[dev-dependencies]
rand = "0.7.3"

[profile.release]
lto = true # More optimization, slower compilation
opt-level = 'z'  # Optimize for size.
panic = 'abort' # For smaller binary size
codegen-units = 1 # Allows for more optimization tricks, but slower